# heat-sim-tmp

./: README.md  fix_m2.patch  materials.yaml  patch.diff  pyproject.toml  sample_traces.json
demos/: demo_m1.py  demo_m2.py  demo_m3.py  demo_m4.py  demo_m5.py
laserpad/: __init__.py  beam_profiles.py  geometry.py  plot.py  solver.py
tests/: test_geometry.py  test_m1.py  test_m2.py  test_m3.py  test_m4.py  test_m5.py
