[tool.poetry]
name = "laser-pad-thermal"
version = "0.1.0"
description = "Selective-laser-soldering pad heat-transfer simulator"
authors = ["Michael <michael.Kovnator@seica.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "laserpad" }]

[tool.poetry.dependencies]
python     = "^3.11"
numpy      = "^1.26"
matplotlib = "^3.9"
streamlit  = "^1.35"
PyYAML    = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
black  = "^24.4"
isort  = "^5.13"
ruff   = "^0.4"
mypy   = "^1.10"

[tool.poetry.scripts]
demo-m1 = "demos.demo_m1:main"
demo-m2 = "demos.demo_m2:main"
demo-m3 = "demos.demo_m3:main"
demo-m4 = "demos.demo_m4:main"
demo-m5 = "demos.demo_m5:main"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
